nearly done with the homepage.. jus tneed to import my fonts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 :root {
   --background: #252127;
 }
@@ -15,7 +20,11 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Rubik', sans-serif;
+}
+
+a {
+  font-family: 'Courier New', Courier, monospace;
 }
 
 @layer utilities {
@@ -23,3 +32,4 @@ body {
     text-wrap: balance;
   }
 }
+
