--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lunasima&display=swap");
 
 :root {
   --background: #252127;
@@ -27,6 +28,40 @@ a {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.fade-in {
+  animation: fadeIn 1s ease-in-out;
+}
+
+.animated-border {
+  animation: liquidBorder 5s infinite;
+}
+
+@keyframes liquidBorder {
+  0%, 100% {
+    border-radius: 50% 50% 50% 50%;
+
+  }
+  25% {
+    border-radius: 60% 40% 60% 40%;
+
+  }
+  50% {
+    border-radius: 40% 60% 40% 60%;
+
+  }
+  75% {
+    border-radius: 50% 50% 60% 40%;
+
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 
 
 @layer utilities {
