added more to about..

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,12 @@
     --background: #252127;
   }
 }
-
+.icon-container {
+  transition: transform 0.2s;
+}
+.icon-container:hover {
+  transform: translateY(-10px);
+}
 body {
   color: var(--foreground);
   background: var(--background);
